--- a/index.html
+++ b/index.html
@@ -53,6 +53,12 @@ patient-reported symptoms and provides personalized drug recommendations.</p>
 browsing and purchasing. With a blend of elegant design, mobile-friendly layout, and high performance, it delivers a pleasant and hassle-free shopping experience for every user.</p>
                 </div>
             </div>
+            <div>
+                <div class ="card">
+                    <h3>Student Application Management System</h3>
+                    <p>The Student Application Management System is a full-stack Java web application designed to help students easily register, log in, and submit their personal and academic details. It provides a clean user interface and secure authentication features, ensuring a smooth and user-friendly experience.</p>
+                <p><strong>GitHub:</strong> <a href="https://greeshmitha-548.github.io/StudentApplication/" target="_blank">https://greeshmitha-548.github.io/StudentApplication/</a></p>
+                </div></div>
         </section>
 
         <section id="skills" class="section">
@@ -121,4 +127,5 @@ technologies, enabling intelligent, seamless communication between objects and p
 
     <script src="script.js"></script>
 </body>
+
 </html>
