--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ browsing and purchasing. With a blend of elegant design, mobile-friendly layout,
                 </div>
                 <div class="card skill-card">
                     <h3>Tools</h3>
-                    <p>Eclipse, VS Code, Git, GitHub, Jenkins (Basics), Docker</p>
+                    <p>Eclipse, VS Code, Git, GitHub,Curosor, Jenkins (Basics)</p>
                 </div>
             </div>
         </section>
@@ -128,4 +128,5 @@ technologies, enabling intelligent, seamless communication between objects and p
 </body>
 
 </html>
+
 
